syntax = "proto3";

package highlevel.product.v1;

option go_package = "highlevel/proto/product/v1;productv1";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
}

// GetUserRequest is the request message for GetUser
message CreateProductRequest {
  string name = 1;
  float price = 2;
  int64 quantity = 3;
}

message CreateProductResponse {
  int64 product_id = 1;
  string name = 2;
  float price = 3;
  int64 quantity = 4;
}

//////////////////////////////

message GetProductRequest {
    int64 product_id = 1;
}

///////
message GetProductListRequest {

}



///////
message UpdateProductRequest {
  int64 product_id = 1;
  string name = 2;
  float price = 3;
  int64 quantity = 4;
}

message UpdateProductResponse {
  int64 product_id = 1;
  string update_message = 2;
}